[package]
name = "riscv-virt-guest"
version = "0.2.0"
authors = ["Ole Sivert Aarhug <ole.sivert@gmail.com>", "Takashi Yoneuchi <takashi.yoneuchi@shift-js.info>"]
edition = "2018"

[dependencies]
num_enum = { version="0.5.1", default-features=false }
log = { version="0.4.11", default-features=false }
sbi-rt = "0.0.3-rc.5"

[build-dependencies]
cc = "1.0.66"
