[package]
name = "rustyvisor"
version = "0.2.0"
authors = ["Ole Sivert Aarhug <ole.sivert@gmail.com>","Takashi Yoneuchi <takashi.yoneuchi@shift-js.info>"]
edition = "2018"

[dependencies]
num_enum = { version="0.5.1", default-features=false }
log = { version="0.4.11", default-features=false }
elf_rs = { version="0.1.3", default-features=false }
rustsbi = { version = "0.4.0", features = ["forward"]}
device_tree = { git = "https://github.com/rcore-os/device_tree-rs/" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.2"
buddy_system_allocator = "0.8"
bare-metal = "1.0.0"

[build-dependencies]
cc = "1.0.66"

[unstable]
build-std = ["alloc"]
